prevented container from becoming too small

--- a/style.css
+++ b/style.css
@@ -159,6 +159,6 @@ body {
 
 @media only screen and (max-width: 400px) {
     .timerDisplay {
-        font-size: 2.5em;
+        font-size: 4em;
     }
 }
